# ymlx

./: .gitignore  Cargo.toml  Dockerfile.cli  Dockerfile.wasm  Makefile  README.md  cbindgen.toml  deploy.sh  docker-compose.yml  package.json  run_tests.sh  rustfmt.toml  test_basic.yml  test_mvp.sh  test_simple.sh  test_simple.yml
.github/workflows/: ci.yml  docker.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docker/: index.html  nginx.conf  ymx.js
docs/: definitions.md
docs/examples/: counter-button.yml  oficina.yml  todo-list.yml
docs/examples/oficina/: app.yml
specs/001-yaml-integration/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-yaml-integration/checklists/: requirements.md
specs/001-yaml-integration/contracts/: api.md
src/: config.rs  context.rs  discoverable_key.rs  error.rs  lib.rs  main.rs  merge.rs  processing_context.rs  tests.rs  utils.rs  value.rs
src/cli/: main.rs  mod.rs
src/error/: mod.rs  reporting.rs
src/execution/: engine.rs  mod.rs
src/interpreters/: mod.rs
src/models/: component.rs
src/output/: formatter.rs  mod.rs
src/parser/: apply.rs  component.rs  macros.rs  mod.rs  render.rs  runtime.rs  runtime_call_instance.rs  tests.rs  types.rs  utils.rs
src/parsing/: mod.rs  yaml_parser.rs
src/processing/: mod.rs  property_substitution.rs
src/renderes/: html.rs
src/utils/: logging.rs  mod.rs
tests/: basic_tests.rs  component_execution.rs  edge_cases.rs  fixtures.rs  integration_tests.rs  parsers.rs  parsers_comprehensive.rs  performance_tests.rs  property_substitution.rs  security_tests.rs  tests.rs  tests_from_old_code.rs  wasm.rs
tests/data/: CvExample.yaml  complex.yml  userListExample.yaml
