[package]
name = "ymx"
version = "0.1.0"
edition = "2021"
description = "YMX component integration system - simplified implementation"
authors = ["YMX Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[[bin]]
name = "ymx"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true