[package]
name = "ymx"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
rust-yaml = "0.0.5"
indexmap = "2.13.0"
thiserror = "2"
regex = "1.10.4"
find-matching-bracket = "0.2.0"
boa_engine = "0.21.0"

serde_yaml_ng = "0.10.0" # Check crates.io for the latest version
serde = { version = "1.0", features = ["derive"] } # Required for deriving Serialize/Deserialize
